# ChangeLog for app-misc/mime-types
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/mime-types/ChangeLog,v 1.61 2007/04/06 08:37:45 dertobi123 Exp $

  06 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> mime-types-7.ebuild:
  ppc stable

  31 Mar 2007; Jeroen Roovers <jer@gentoo.org> mime-types-7.ebuild:
  Stable for HPPA too.

  30 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> mime-types-7.ebuild:
  Stable on sparc

  30 Mar 2007; Andrej Kacian <ticho@gentoo.org> ChangeLog:
  Manifest fix

  29 Mar 2007; Andrej Kacian <ticho@gentoo.org> -mime-types-2.ebuild,
  -mime-types-4.ebuild, -mime-types-6.ebuild, mime-types-7.ebuild:
  Removed obsolete ebuilds. mime-types-7 stable on x86.

  01 Mar 2007; <genstef@gentoo.org> mime-types-6.ebuild,
  mime-types-7.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*mime-types-7 (09 Dec 2006)

  09 Dec 2006; Andrej Kacian <ticho@gentoo.org> +mime-types-7.ebuild:
  Added video/x-flv. Bug #142432 by J'raxis 270145 <gentoo at jraxis.org>.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> mime-types-5.ebuild:
  Marked stable on mips.

*mime-types-6 (24 Jul 2006)

  24 Jul 2006; Andrej Kacian <ticho@gentoo.org> +mime-types-6.ebuild:
  Update. Include mime types from rfc3555. Bug #133398, reported by Matthew
  Schultz <mattsch@gmail.com>.

  22 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> mime-types-5.ebuild:
  Add ~x86-fbsd keyword.

  24 Mar 2006; Aron Griffis <agriffis@gentoo.org> mime-types-5.ebuild:
  Mark 5 stable on ia64. #126703

  20 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> mime-types-5.ebuild:
  Stable on sparc wrt #126703

  20 Mar 2006; Markus Ullmann <jokey@gentoo.org> mime-types-5.ebuild:
  arm stable

  19 Mar 2006; Fernando J. Pereda <ferdy@gentoo.org> mime-types-5.ebuild:
  Stable on alpha as per bug #126703

  19 Mar 2006; Jeroen Roovers <jer@gentoo.org> mime-types-5.ebuild:
  Stable on hppa (bug #126703).
