@@ -1,24 +1,16 @@
-DIST mime-types-6.tar.bz2 6308 RMD160 23b1f9044d7bf6574c567a88d07fea120bf441da SHA1 aece70df53081e8b0da6dd40fdddac7b24eed7f4 SHA256 385719460290d101f24fd70603b502a95732aca970d222b797ed1f31d9f894d3
 DIST mime-types-7.tar.bz2 6317 RMD160 367726d20183b07b3a00a8e61a2ede397e2cc238 SHA1 625764d38750b1d54a558c89d885154781d4211a SHA256 f86af26e408462dd3e7b4ee1e806422e02ab63b39fc7c32182cadf98b12a6d1a
-EBUILD mime-types-6.ebuild 540 RMD160 eb4041cfe3b54c985885b5b92846877883265eae SHA1 54c7703f32a09b3ea3bd91b6f556d8b0bd88e6f3 SHA256 a8089b9941eb53b52f53cc62e6175cac4079ad568e9dcfa34f7a7c9752e7cb2d
-MD5 96776e0ed3bd60646b72278e5e7ed13e mime-types-6.ebuild 540
-RMD160 eb4041cfe3b54c985885b5b92846877883265eae mime-types-6.ebuild 540
-SHA256 a8089b9941eb53b52f53cc62e6175cac4079ad568e9dcfa34f7a7c9752e7cb2d mime-types-6.ebuild 540
-EBUILD mime-types-7.ebuild 545 RMD160 737bc03f3bd9629e243b690617f883b2337436c2 SHA1 04d333f721fc426a39f807d163449ae7889f4544 SHA256 f3d481c8e5c04d553c2776160f5cd10799554815a239f14f6b2c1120eac3e821
-MD5 133b01bf89387d301bf3463c5efb83b9 mime-types-7.ebuild 545
-RMD160 737bc03f3bd9629e243b690617f883b2337436c2 mime-types-7.ebuild 545
-SHA256 f3d481c8e5c04d553c2776160f5cd10799554815a239f14f6b2c1120eac3e821 mime-types-7.ebuild 545
-MISC ChangeLog 6837 RMD160 245107c77de7f359147c95b0f13d517ff7c8f5fc SHA1 10e1fb2fdfc9a35942cf5faf375a1701383e42ca SHA256 45d5348aedf00b0cd41fbed66216e227e22f953a23bdaf45cda4a0dafd0166f0
-MD5 2024e129e7d2fb9fbdabb577a189f6f9 ChangeLog 6837
-RMD160 245107c77de7f359147c95b0f13d517ff7c8f5fc ChangeLog 6837
-SHA256 45d5348aedf00b0cd41fbed66216e227e22f953a23bdaf45cda4a0dafd0166f0 ChangeLog 6837
+EBUILD mime-types-7.ebuild 542 RMD160 a4550a915b03d463414349243f09c4cf8b2a09d9 SHA1 ae0910cd5a65f8bb2a69281392ccc6861221ccce SHA256 9b47c513b04da811c460c75b5996f1e84e586e88a124c07eadaadc60978ae123
+MD5 fcd56d1a6067f9422e2c5f5355894a9b mime-types-7.ebuild 542
+RMD160 a4550a915b03d463414349243f09c4cf8b2a09d9 mime-types-7.ebuild 542
+SHA256 9b47c513b04da811c460c75b5996f1e84e586e88a124c07eadaadc60978ae123 mime-types-7.ebuild 542
+MISC ChangeLog 6923 RMD160 fbcf63b413fa553af80ae65f9f50806c63fd8922 SHA1 1f2a954e9ea01d206e9a2f5c34a28fda1d261156 SHA256 05deb3dafa8d9f0b0889b75f9b5b706fe3d21c37ebdeb3cdc61568d73b4cad6d
+MD5 27e3d1e37e7b747657f0beced99206eb ChangeLog 6923
+RMD160 fbcf63b413fa553af80ae65f9f50806c63fd8922 ChangeLog 6923
+SHA256 05deb3dafa8d9f0b0889b75f9b5b706fe3d21c37ebdeb3cdc61568d73b4cad6d ChangeLog 6923
 MISC metadata.xml 161 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 SHA1 a1fecd2f7b169d621b88c6ccab9d758209fc8f19 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32
 MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 metadata.xml 161
 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32 metadata.xml 161
-MD5 32a87f1e4c8c00214feaea02e8083f9e files/digest-mime-types-6 235
-RMD160 b4c810055b01dc92fdb1cbe62a67f60e232042b7 files/digest-mime-types-6 235
-SHA256 a616bac825f514f6c980e8e78348d2825764ebde2eb9f42a7f7c3dab49e87cd9 files/digest-mime-types-6 235
 MD5 ec17b43cc51339804d594027d4620ca7 files/digest-mime-types-7 235
 RMD160 31a9e74796cc0618a7860af0a8a9a8fc7673fa76 files/digest-mime-types-7 235
 SHA256 812fb348ac80ea5116bf796281a8f41e59f1fbb53d0b72fe5ee988717c7348d3 files/digest-mime-types-7 235
