@@ -1,3 +1,0 @@
-MD5 4f24eda4caa0a93bdba087fe6d10cdfe mime-types-6.tar.bz2 6308
-RMD160 23b1f9044d7bf6574c567a88d07fea120bf441da mime-types-6.tar.bz2 6308
-SHA256 385719460290d101f24fd70603b502a95732aca970d222b797ed1f31d9f894d3 mime-types-6.tar.bz2 6308
