@@ -1,22 +1,0 @@
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/mime-types/mime-types-6.ebuild,v 1.1 2006/07/24 22:23:16 ticho Exp $
-
-EAPI="prefix"
-
-DESCRIPTION="Provides /etc/mime.types file"
-HOMEPAGE="http://www.gentoo.org/"
-SRC_URI="mirror://gentoo/${P}.tar.bz2"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~amd64 ~ppc-macos ~sparc-solaris ~x86 ~x86-macos ~x86-solaris"
-IUSE=""
-
-DEPEND=""
-RDEPEND=""
-
-src_install() {
-	insinto /etc
-	doins mime.types || die
-}
